@@ -18,20 +18,23 @@ using namespace std;
 
 extern atomic<bool> abort;
 
+extern atomic<bool> pause;
+
+inline void clear_pause() { pause = false; }
+
 inline void clear_abort()
 {
-    abort.store(false, memory_order_seq_cst);
+    abort = false;
+    clear_pause();
 }
 
-inline bool get_abort()
-{
-    return abort.load(memory_order_relaxed);
-}
+inline bool get_abort() { return abort; }
 
-inline void set_abort()
-{
-    abort.store(true, memory_order_seq_cst);
-}
+inline void set_abort() { abort = true; }
+
+inline bool get_pause() { return pause; }
+
+inline void set_pause() { pause = true; }
 
 //-----------------------------------------------------------------------------
 
