@@ -28,6 +28,8 @@ Version 15.UNKNOWN (master)
   normal speed)
 * The Android version now shows an error before open/save if permission
   to access storage have not been granted.
+* The Android version now pauses running move generations or game analyses
+  if the app goes into inactive state (e.g. during incoming calls).
 * The translation source strings for menu items and actions no longer use
   an ampersand to mark a mnemonic but a separate translation string for
   the mnemonic. Ampersands caused problems with searches in Weblate
